# statute-graph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
paper/: .gitignore  _config.yml  _toc.yml  discussion.md  index.md  introduction.md  methods.ipynb  methods.md  myst.yml  references.bib  results.ipynb  results.md
paper/_static/: explorer.html
paper/_static/data/: encoding_sequence.json  ordering_comparison.json
scripts/: generate_figures.py
src/statute_graph/: __init__.py  cli.py  graph.py  loaders.py
tests/: test_cli.py  test_graph.py
