[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statute-graph"
version = "0.1.0"
description = "Graph analysis of statutory cross-references for optimal encoding order"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Cosilico", email = "team@cosilico.ai" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "networkx>=3.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "click>=8.0",
]

[project.scripts]
statute-graph = "statute_graph.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
xml = [
    "lxml>=4.9",
]
paper = [
    "mystmd",
]

[tool.hatch.build.targets.wheel]
packages = ["src/statute_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
